--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,6 @@
 ---
 # Metricbeat major version to be installed
-major_version: 7
+metricbeat_major_version: 7
+
+# Enable Metricbeat starting on boot
+metricbeat_enable_on_boot: true
