--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,8 @@
 ---
 # Install
-- include_tasks: install.yml
+- import_tasks: install.yml
+  tags: ['install']
+
+# Configure
+- import_tasks: configure.yml
+  tags: ['configure']
