--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,10 @@ metricbeat_major_version: 7
 # Enable Metricbeat starting on boot
 metricbeat_enable_on_boot: true
 
+# Path configuration
+metricbeat_conf_path: /etc/metricbeat
+metricbeat_modules_path: /etc/metricbeat/modules.d
+
 # Kibana host
 kibana_host: "localhost:5601"
 
@@ -23,3 +27,53 @@ logstash_output_enabled: false
 logstash_certificate_authorities:
 logstash_ssl_certificate_path:
 logstash_ssl_key_path:
+
+# Modules configuration
+metricbeat_modules:
+  system:
+    enabled: true
+    config:
+    - period: 10s
+      metricsets:
+        - cpu
+        - load
+        - memory
+        - network
+        - process
+        - process_summary
+        - socket_summary
+        - core
+        - diskio
+      extra:
+        process.include_top_n:
+          by_cpu: 5
+          by_memory: 5
+    - period: 1m
+      metricsets:
+        - filesystem
+        - fsstat
+      processors:
+      - drop_event.when.regexp:
+          system.filesystem.mount_point: '^/(sys|cgroup|proc|dev|etc|host|lib)($|/)'
+    - period: 15m
+      metricsets:
+        - uptime
+
+# Metricbeat modules definition (don't change!)
+metricbeat_supported_modules:
+  - docker
+  - elasticsearch
+  - haproxy
+  - http
+  - kibana
+  - kvm
+  - logstash
+  - memcached
+  - mysql
+  - nginx
+  - php_fpm
+  - postgresql
+  - rabbitmq
+  - redis
+  - system
+  - uwsgi
