--- a/tasks/configure-modules.yml
+++ b/tasks/configure-modules.yml
@@ -5,7 +5,7 @@
     state: absent
   loop: "{{ metricbeat_supported_modules }}"
   when: item not in metricbeat_modules or (item in metricbeat_modules and metricbeat_modules[item].enabled != true)
-  notify: Reload Metricbeat
+  notify: Restart Metricbeat
 
 - name: Enable and configure enabled Metricbeat modules
   template:
@@ -13,4 +13,4 @@
     dest: "{{ metricbeat_modules_path }}/{{ item }}.yml"
   loop: "{{ metricbeat_supported_modules }}"
   when: item in metricbeat_modules and (metricbeat_modules[item].enabled is undefined or metricbeat_modules[item].enabled == true)
-  notify: Reload Metricbeat
+  notify: Restart Metricbeat
