--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -4,3 +4,13 @@
     src: templates/metricbeat.yml.j2
     dest: "{{ metricbeat_conf_path }}/metricbeat.yml"
   notify: Reload Metricbeat
+
+- name: Setup Index and other Elasticsearch stuff
+  shell:
+    cmd: metricbeat setup --index-management
+  when: metricbeat_setup_index == true
+
+- name: Setup Kibana Dashboards
+  shell:
+    cmd: metricbeat setup --dashboards
+  when: metricbeat_setup_dashboards == true
