--- a/tasks/configure-modules.yml
+++ b/tasks/configure-modules.yml
@@ -4,13 +4,30 @@
     path: "{{ metricbeat_modules_path }}/{{ item }}.yml"
     state: absent
   loop: "{{ metricbeat_supported_modules }}"
-  when: item not in metricbeat_modules or (item in metricbeat_modules and metricbeat_modules[item].enabled != true)
+  when: lookup('vars', 'metricbeat_module_' + item).enabled != true
   notify: Restart Metricbeat
+
+- name: Set modules config from configured variable
+  set_fact:
+    metricbeat_modules_config: "{{ metricbeat_modules_config | combine({item: lookup('vars', 'metricbeat_module_' + item).config}) }}"
+  loop: "{{ metricbeat_supported_modules }}"
+  when: lookup('vars', 'metricbeat_module_' + item).enabled == true and lookup('vars', 'metricbeat_module_' + item).config is defined
+
+- name: Set modules config from default variable if not configures
+  set_fact:
+    metricbeat_modules_config: "{{ metricbeat_modules_config | combine( {item: metricbeat_modules_default_config[item]} ) }}"
+  loop: "{{ metricbeat_supported_modules }}"
+  when: lookup('vars', 'metricbeat_module_' + item).enabled == true and lookup('vars', 'metricbeat_module_' + item).config is not defined
+
+- debug:
+    msg: "{{ metricbeat_modules_config }}"
 
 - name: Enable and configure enabled Metricbeat modules
   template:
-    src: "templates/{{ item }}.yml.j2"
+    src: "templates/modules/{{ item }}.yml.j2"
     dest: "{{ metricbeat_modules_path }}/{{ item }}.yml"
+  vars:
+    module_config: "{{ metricbeat_modules_config[item] }}"
   loop: "{{ metricbeat_supported_modules }}"
-  when: item in metricbeat_modules and (metricbeat_modules[item].enabled is undefined or metricbeat_modules[item].enabled == true)
+  when: lookup('vars', 'metricbeat_module_' + item).enabled == true
   notify: Restart Metricbeat
