--- a/defaults/main/modules-default-config.yml
+++ b/defaults/main/modules-default-config.yml
@@ -2,6 +2,13 @@
 # Module configuration
 metricbeat_modules_config: {}
 
+# Supported modules by this role
+metricbeat_supported_modules:
+  - elasticsearch
+  - postgresql
+  - redis
+  - system
+
 # Modules default configuration
 metricbeat_modules_default_config:
   elasticsearch:
@@ -53,9 +60,59 @@ metricbeat_modules_default_config:
       metricsets:
         - uptime
 
-# Supported modules by this role
-metricbeat_supported_modules:
-  - elasticsearch
-  - postgresql
-  - redis
-  - system
+# Additional module default configuration on Linux
+metricbeat_additional_default_config:
+  system:
+    - period: 10s
+      metricsets:
+        - cpu
+        - load
+        - memory
+        - network
+        - process
+        - process_summary
+        - socket_summary
+        - core
+        - diskio
+      extra:
+        process.include_top_n:
+          by_cpu: 5
+          by_memory: 5
+    - period: 1m
+      metricsets:
+        - filesystem
+        - fsstat
+      processors:
+      - drop_event.when.regexp:
+          system.filesystem.mount_point: '^/(sys|cgroup|proc|dev|etc|host|lib)($|/)'
+    - period: 15m
+      metricsets:
+        - uptime
+
+# Additional module default configuration on Windows
+metricbeat_win_additional_default_config:
+  system:
+    - period: 10s
+      metricsets:
+        - cpu
+        - memory
+        - network
+        - process
+        - process_summary
+        - socket_summary
+        - core
+        - diskio
+      extra:
+        process.include_top_n:
+          by_cpu: 5
+          by_memory: 5
+    - period: 1m
+      metricsets:
+        - filesystem
+        - fsstat
+      processors:
+      - drop_event.when.regexp:
+          system.filesystem.mount_point: '^/(sys|cgroup|proc|dev|etc|host|lib)($|/)'
+    - period: 15m
+      metricsets:
+        - uptime
