--- a/tasks/configure-modules.yml
+++ b/tasks/configure-modules.yml
@@ -1,11 +1,13 @@
 ---
-- name: Disable disabled Metricbeat modules
-  file:
-    path: "{{ metricbeat_modules_path }}/{{ item }}.yml"
-    state: absent
-  loop: "{{ metricbeat_supported_modules }}"
-  when: lookup('vars', 'metricbeat_module_' + item).enabled != true
-  notify: Restart Metricbeat
+- name: Set modules default configuration on Linux
+  set_fact:
+    metricbeat_modules_default_config: "{{ metricbeat_modules_default_config | combine(metricbeat_additional_default_config) }}"
+  when: ansible_system == "Linux"
+
+- name: Set modules default configuration on Windows
+  set_fact:
+    metricbeat_modules_default_config: "{{ metricbeat_modules_default_config | combine(metricbeat_win_additional_default_config) }}"
+  when: ansible_os_family == "Windows"
 
 - name: Set modules config from configured variable
   set_fact:
@@ -19,12 +21,8 @@
   loop: "{{ metricbeat_supported_modules }}"
   when: lookup('vars', 'metricbeat_module_' + item).enabled == true and lookup('vars', 'metricbeat_module_' + item).config is not defined
 
-- name: Enable and configure enabled Metricbeat modules
-  template:
-    src: "templates/modules/{{ item }}.yml.j2"
-    dest: "{{ metricbeat_modules_path }}/{{ item }}.yml"
-  vars:
-    module_config: "{{ metricbeat_modules_config[item] }}"
-  loop: "{{ metricbeat_supported_modules }}"
-  when: lookup('vars', 'metricbeat_module_' + item).enabled == true
-  notify: Restart Metricbeat
+- import_tasks: configure-modules-Linux.yml
+  when: ansible_system == "Linux"
+
+- import_tasks: configure-modules-Windows.yml
+  when: ansible_os_family == "Windows"
