MySQL module disabled by default

--- a/defaults/main/main.yml
+++ b/defaults/main/main.yml
@@ -47,6 +47,9 @@ metricbeat_module_system:
 metricbeat_module_elasticsearch:
   enabled: false
 
+metricbeat_module_mysql:
+  enabled: false
+
 metricbeat_module_postgresql:
   enabled: false
 
