--- a/defaults/main/modules-default-config.yml
+++ b/defaults/main/modules-default-config.yml
@@ -6,6 +6,7 @@ metricbeat_modules_config: {}
 metricbeat_supported_modules:
   - elasticsearch
   - mysql
+  - nginx
   - postgresql
   - redis
   - system
@@ -19,6 +20,12 @@ metricbeat_modules_default_config:
         - node_stats
       hosts:
         - "http://127.0.0.1:9200"
+  nginx:
+    - period: 10s
+      metricsets:
+        - stubstatus
+      hosts:
+        - "http://127.0.0.1"
   mysql:
     - period: 10s
       metricsets:
