--- a/defaults/main/modules-default-config.yml
+++ b/defaults/main/modules-default-config.yml
@@ -7,6 +7,7 @@ metricbeat_supported_modules:
   - elasticsearch
   - mysql
   - nginx
+  - php_fpm
   - postgresql
   - redis
   - system
@@ -32,6 +33,14 @@ metricbeat_modules_default_config:
         - status
       hosts:
         - "root:secret@tcp(127.0.0.1:3306)/"
+  php_fpm:
+    - period: 10s
+      metricsets:
+        - pool
+        - process
+      hosts:
+        - localhost:8080"
+      status_path: "/status"
   postgresql:
     - period: 10s
       metricsets:
