Added Docker module

--- a/defaults/main/modules-default-config.yml
+++ b/defaults/main/modules-default-config.yml
@@ -5,6 +5,7 @@ metricbeat_modules_config: {}
 # Supported modules by this role
 metricbeat_supported_modules:
   - apache
+  - docker
   - elasticsearch
   - mssql
   - mysql
