--- a/defaults/main/main.yml
+++ b/defaults/main/main.yml
@@ -47,6 +47,9 @@ metricbeat_module_system:
 metricbeat_module_apache:
   enabled: false
 
+metricbeat_module_beat:
+  enabled_false
+
 metricbeat_module_docker:
   enabled: false
 
