--- a/defaults/main/modules-default-config.yml
+++ b/defaults/main/modules-default-config.yml
@@ -5,6 +5,7 @@ metricbeat_modules_config: {}
 # Supported modules by this role
 metricbeat_supported_modules:
   - apache
+  - beat
   - docker
   - elasticsearch
   - mssql
@@ -22,6 +23,13 @@ metricbeat_modules_default_config:
       metricsets:
         - status
       server_status_path: server-status
+  beat:
+    - period: 10s
+      metricsets:
+        - stats
+        - state
+      hosts:
+        - http://localhost:5066
   docker:
     - period: 10s
       metricsets:
